# QtWaitingSpinner

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt
